# TO_FINAL

./: CMakeLists.txt  aire datos.csv  aire_datos.csv  main.cpp
aire/: package-lock.json  package.json
aire/app/: page.tsx
aire/app/api/data-stream/data-stream/: route.tsx
aire/app/components/: Alert.tsx  DataChart.tsx
include/: uv.h
